[package]
name = "mpl-program-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.9.13"
solana-program-test = "1.9.13"
solana-sdk = "1.9.13"
mpl-token-metadata = "1.2.5"
spl-token = "3.3.0"

[features]
default = ["test-bpf"]
no-entrypoint = []
test-bpf = []
